fix:(swagger) update swagger and comments
